--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dva": "^2.4.1",
     "qs": "^6.7.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "xlsx-oc": "^1.0.2"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
@@ -27,7 +28,5 @@
     "redbox-react": "^1.4.3",
     "roadhog": "^2.5.0-beta.4"
   },
-  "lint-staged": {
-
-  }
+  "lint-staged": {}
 }
